# pos

./: docker-compose.yml
backend/: .env  alembic.ini  requirements.txt  seed.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: articles.py  auth.py  customers.py  dashboard.py  documents.py  reports.py  suppliers.py  time_control.py  tpv.py
backend/app/models/: __init__.py  article.py  customer.py  document.py  supplier.py  time_control.py  tpv.py  user.py
backend/app/schemas/: __init__.py  article.py  customer.py  document.py  supplier.py  time_control.py  tpv.py  user.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  endpoints.ts
frontend/src/components/: DataTable.tsx  Layout.tsx  Modal.tsx
frontend/src/pages/: ArticlesPage.tsx  CustomersPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  LoginPage.tsx  ReportsPage.tsx  SuppliersPage.tsx  TimeControlPage.tsx  TpvPage.tsx
frontend/src/store/: authStore.ts  tpvStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
src-tauri/: Cargo.toml  tauri.conf.json
