[package]
name = "lopeztech-pos"
version = "1.0.0"
description = "LopezTech POS - Sistema de Gestión y TPV"
authors = ["LopezTech"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
